@@ -16,3 +16,6 @@ xsri like logo functionality
 
 the photosetup proggie should be put into some sort of crapplet and there
 should be other settings in the crapplet as well.
+
+allow adding a list of hosts to gdm.conf to xdmcp chooser ala xdm chooser,
+instead of just broadcast
