@@ -1,3 +1,10 @@
+Fri Jun 22 15:26:01 2001  George Lebl <jirka@5z.com>
+
+	* daemon/Makefile.am, daemon/choose.[ch], daemon/xdmcp.c,
+	  daemon/gdm.h, daemon/display.c:  Rework of how choosing works,
+	  should theoretically all work and be complete, but it doesn't work
+	  currently
+
 2001-06-20  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gui/gdmlanguages.c: Added here too.
